google analytics, changes to nav and upcoming

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lint-staged": "^6.0.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vue-ua": "^1.5.0"
   },
   "browserslist": [
     "> 1%",
