--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0-rc.6",
     "firebase": "^4.12.1",
+    "flag-icon-css": "^3.0.0",
     "register-service-worker": "^1.0.0",
     "storyblok-vue": "^1.0.4",
     "vue": "^2.5.13",
