--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "node-sass": "^4.9.1",
     "nuxt": "^1.0.0",
+    "sass-loader": "^7.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vuetify": "^1.1.1"
