--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
+    "flag-icon-css": "^3.0.0",
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-i18n": "^8.0.0",
     "vuetify": "^1.1.1"
   },
   "devDependencies": {
