* basic storyblok setup

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
+    "storyblok-nuxt": "0.0.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-i18n": "^8.0.0",
