--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-i18n": "^8.0.0",
+    "vue-moment": "^4.0.0",
     "vuetify": "^1.1.1"
   },
   "devDependencies": {
