--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
     "flag-icon-css": "^3.0.0",
+    "markdown": "^0.5.0",
     "node-sass": "^4.9.1",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
