--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,7 +16,7 @@ ONBUILD RUN npm install
 ONBUILD RUN npm run build
 
 ENV HOST 0.0.0.0
-# EXPOSE 3000
+EXPOSE 3000
 
 # start command
 # CMD [ "npm", "start" ]
